# ghost-driver

./: CMakeLists.txt  README.md  build.sh  install-dependencies.sh  mappings.imp  rebuild.sh
assets/: grid.txt
src/: agent.cpp  agent.h  clock.cpp  clock.h  collision.cpp  collision.h  constants.h  game-loop.cpp  game-loop.h  game_loop.cpp  game_loop.h  graphics.cpp  graphics.h  grid.cpp  grid.h  input.cpp  input.h  main.cpp  opponent.cpp  opponent.h  play.cpp  play.h  player.cpp  player.h  sound.cpp  sound.h  spritesheet.cpp  spritesheet.h  state.cpp  state.h  title-screen.cpp  title-screen.h  user-interface.cpp  user-interface.h
